# datalogger

./: .gitignore  .gitmodules  .pandoc.yml  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  build.ps1  data_tools.hpp  datalogger.cpp  datalogger.h  datalogger.sln  infomobility.cpp  makefile  packages.config  serial_reader.sln  serial_reader.vcxproj  serial_reader.vcxproj.filters  serial_tools.hpp  swap_tools.hpp  vcpkg.json
.github/workflows/: ccpp.yml
doc/: Doxyfile
file_converter/: file_converter.cpp  file_converter.vcxproj  file_converter.vcxproj.filters  packages.config
file_converter.vcxproj/: file_converter.vcxproj  file_converter.vcxproj.filters
serial_reader/: data_tools.hpp  datalogger.cpp  datalogger.h  serial_reader.cpp  serial_reader.vcxproj  serial_reader.vcxproj.filters  serial_tools.cpp  serial_tools.h  serial_tools.hpp  sharedmem.cpp  swap_tools.hpp
serial_reader.vcxproj/: packages.config  serial_reader.vcxproj  serial_reader.vcxproj.filters
serial_viewer/: Frame.cpp  Frame.h  draw.cpp  draw.h  form.cpp  form.h  packages.config  serial_viewer.cpp  serial_viewer.vcxproj  serial_viewer.vcxproj.filters
serial_viewer.vcxproj/: packages.config  serial_viewer.vcxproj
src/: Frame.cpp  data.hpp  data_tools.hpp  datalogger.h  draw.cpp  draw.h  file_converter.cpp  form.cpp  serial_reader.cpp  serial_tools.cpp  serial_tools.h  serial_viewer.cpp  shared_memory.hpp  sharedmem.cpp  swap_tools.hpp  version.h  version.h.in
tests/: FINAL_TEST_SUMMARY.md  TEST_COVERAGE_REPORT.md  run_all_tests.ps1  test_constants.cpp  test_data.cpp  test_exceptions.cpp  test_integration.cpp  test_navdata.cpp  test_readresult.cpp  test_serialoptions.cpp  test_sharedmemory.cpp  test_simpleserial.cpp  test_swaptools.cpp  test_version.cpp  validate_test_structure.ps1
tools/: TOOL_run_all.ps1  TOOL_start_texa.ps1  TOOL_stop_texa.ps1  run_all.ps1  start_texa.ps1
